@@ -1,3 +1,8 @@
+2008-07-15  Mike Krüger <mkrueger@novell.com> 
+
+	* MonoDevelop.Core.Gui/PlatformService.cs: Fixed possible null
+	  reference exception.
+
 2008-07-07  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* MonoDevelop.Core.Gui/SyncContext.cs: Avoid name colisions when
